fix create circle text alignment

--- a/assets/less/views/circles.less
+++ b/assets/less/views/circles.less
@@ -223,7 +223,6 @@
 			}
 			#savecircle {
 				@media @mobile { .column(12); }
-				padding: 10px 10px;
 				margin-left: 1% !important;
 			}
 		}
